HW1 added into progress journal

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-merlot
-title: Your Name's Progress Journal
-description: This journal is created for IE 582 Fall24.
+theme: jekyll-theme-modernist
+title: Yusuf Sina Öztürk's Progress Journal
+description: This journal is created for IE 582 Fall24. Yusuf Sina, as it will be mentioned only as Sina. 
